<resources>
    <string name="app_name">The Royal Game of Ur</string>

    //strings for activity_main.xml
    <string name="singleButton">SINGLE PLAYER</string>
    <string name="multiButton">MULTI PLAYER</string>
    <string name="rulesButton">RULES</string>
    <string name="ruleOne">1. Player 1\'s pieces are white, and Player 2\'s pieces are black.</string>
    <string name="ruleTwo">2. The objective of the game is to get all your pieces on and off the board before the other player.</string>
    <string name="ruleThree">3. On your turn, shake your device to roll a number between one and four. This determines how many spaces you can move.</string>
    <string name="ruleFour">4. You can either choose to move a piece that is already on the board, or you can move a new piece onto the board.</string>
    <string name="ruleFive">5. The middle column consists of combat squares: If a player\'s piece lands on an already-occupied piece, it knocks that piece back to the start.</string>
    <string name="ruleSix">6. The rosette in the middle column is a safe space: two pieces can reside here at the same time.</string>
    <string name="ruleSeven">7. If a player lands on one of the other four rosettes, they can roll again.</string>
    <string name="rule">rule</string>
    <string name="title">title</string>
    <string name="soundButton">SOUND ON/OFF</string>

    // strings for activity_game_screen.xml
    <string name="rollButton">ROLL</string>
    <string name="passButton">PASS</string>
    <string name="gameBoard">gameBoard</string>
    <string name="scoreBox">scoreBox</string>
    <string name="score">score</string>
    <string name="piece">piece</string>
    <string name="label">label</string>
    <string name="rollBox">rollBox</string>
    <string name="rollResult">rollResult</string>
    <string name="rollValue">0</string>

    //strings for activity_win_screen.xml and lose_screen.xml
    <string name="playAgainButton">PLAY AGAIN</string>
    <string name="quitButton">QUIT GAME</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="player1Score">0</string>
    <string name="player2Score">0</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
</resources>

